[gd_scene load_steps=4 format=3 uid="uid://cf7jignhp2fkd"]

[ext_resource type="Script" path="res://Networking/PeerToPeerConnection.gd" id="1_60cg2"]
[ext_resource type="Texture2D" uid="uid://dbp6xw1k6j3o" path="res://Aaliyah/UI/Background/Dungeon Pic.jpeg" id="2_eymyl"]
[ext_resource type="FontFile" uid="uid://bmtf3mpkawr66" path="res://Aaliyah/UI/Font/ConnectionII.otf" id="3_unxdt"]

[node name="ConnectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60cg2")

[node name="DungeonPic" type="Sprite2D" parent="."]
position = Vector2(578.5, 326)
scale = Vector2(1.13, 1.14)
texture = ExtResource("2_eymyl")

[node name="Multiplayer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -212.5
offset_top = 88.0
offset_right = 212.5
offset_bottom = 171.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_unxdt")
theme_override_font_sizes/font_size = 80
text = "Multiplayer"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -22.0
offset_right = 180.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Host" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_unxdt")
theme_override_font_sizes/font_size = 50
text = "Host"

[node name="Join" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_unxdt")
theme_override_font_sizes/font_size = 50
text = "Join"

[node name="Start Game" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_unxdt")
theme_override_font_sizes/font_size = 50
text = "Start Game"

[connection signal="pressed" from="HBoxContainer/Host" to="." method="_hostGame"]
[connection signal="pressed" from="HBoxContainer/Join" to="." method="_joinGame"]
[connection signal="pressed" from="HBoxContainer/Start Game" to="." method="_startGame"]
